# eks-ai-platform

./: .coveragerc  .dockerignore  .env.example  .gitignore  BEST_PRACTICES.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
infra_platform/api/: main.py  test_main.py
infra_platform/core/: decision_engine.py  logging_config.py  test_decision_engine.py
